--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="navbar-wrapper">
       <div class="container">
           <h1>Serviço de aplicativos Guilherme</h1>
+        <h1>Vitoria Chacon de Carvalho</h1>
           <hr/>
       </div>
     </div>
