--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <body>
     <div class="navbar-wrapper">
       <div class="container">
-          <h1>Serviço de aplicativos Guilherme</h1>
-        <h1>Vitoria Chacon de Carvalho</h1>
+        <h1>Serviço de aplicativos Guilherme</h1>
+          <a href = "VitoriaChacon.html"<h1>Vitoria Chacon de Carvalho</h1>
           <hr/>
       </div>
     </div>
