--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="navbar-wrapper">
       <div class="container">
         <h1>Serviço de aplicativos Guilherme</h1>
-          <a href = "VitoriaChacon.html"<h1>Vitoria Chacon de Carvalho</h1>
+        <a href = "VitoriaChacon.html"<h1>Vitoria Chacon de Carvalho</h1></a>
           <hr/>
       </div>
     </div>
