--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
   <body>
     <div class="navbar-wrapper">
       <div class="container">
-        <h1>Serviço de aplicativos Guilherme</h1>
-        <a href = "VitoriaChacon.html"<h1>Vitoria Chacon de Carvalho</h1></a>
-          <h1>Serviço de aplicativos Guilherme</h1>
+        <h1>Serviço de aplicativos</h1>
           <h2><a href="nicolas.html">Nicolas</a></h2>
         <h2><a href="Fabio.html">Fabio</a></h2>
         <h2><a href="Diego.html">Diego</a></h2>
            <a href="denis.html"><h1>Denis Felipe dos Santos RA 1701485</h1></a>
           <a href="guilherme.html"><h1>Guilherme Moreira da Natividade</h1></a>
+        <a href = "VitoriaChacon.html"<h1>Vitoria Chacon de Carvalho</h1></a>
           <hr/>
       </div>
     </div>
