--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
           <h2><a href="nicolas.html">Nicolas</a></h2>
         <h2><a href="Fabio.html">Fabio</a></h2>
         <h2><a href="Diego.html">Diego</a></h2>
-           <a href="denis.html"><h1>Denis Felipe dos Santos RA 1701485</h1></a>
-          <a href="guilherme.html"><h1>Guilherme Moreira da Natividade</h1></a>
-        <a href = "VitoriaChacon.html"<h1>Vitoria Chacon de Carvalho</h1></a>
+           <a href="denis.html"><h2>Denis Felipe dos Santos RA 1701485</h2></a>
+          <a href="guilherme.html"><h2>Guilherme Moreira da Natividade</h2></a>
+        <h2><a href="VitoriaChacon.html">Vitoria Chacon de Carvalho</a></h2>
           <hr/>
       </div>
     </div>
